# spakky-typer

./: README.md  pyproject.toml
spakky_typer/: main.py  post_processor.py
spakky_typer/plugins/: typer_cli.py
spakky_typer/stereotypes/: api_controller.py  cli_controller.py
spakky_typer/utils/: asyncio.py  casing.py
tests/: conftest.py  test_command.py
tests/apps/: dummy.py
tests/plugins/: test_typer_cli.py
