[tool.poetry]
name = "spakky-typer"
version = "1.0.1"
description = "Highly abstracted Framework core to use DDD & DI/IoC & AOP & Etc..."
authors = ["Spakky <sejong418@icloud.com>"]
readme = "README.md"

[tool.poetry.plugins."spakky.plugins"]
fastapi = "spakky_typer.main:initialize"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10"
spakky-core = ">=2.10"
typer = { extras = ["all"], version = "^0.13" }

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^24.10.0"
isort = "^5.12.0"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
toml = "^0.10.2"
ruff = "^0.9.6"
pre-commit = "^4.1.0"

[tool.poetry.group.ci.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
ruff = "^0.9.6"

[tool.ruff]
builtins = ["_"]
cache-dir = "~/.cache/ruff"

[tool.pytest.ini_options]
pythonpath = "spakky_typer"
testpaths = "tests"
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = """
    --cov
    --cov-report=term
    --cov-report=xml
    --no-cov-on-fail
    --strict-markers
    -p no:warnings
    -vv
"""

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 90
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
]
